src/tests/snapshots/hebi__tests__class_def__class_def_with_init.snap
---
source: src/tests/class_def.rs
expression: snapshot
---
# Input:
class T:
  fn init(self, *, v=10):
    self.v = v
    if v > 10:
      print "large"
    else:
      print "small"

t0 := T()
t1 := T(v=20)

print t0.v, t1.v


# Result (success):
none

# Stdout:
small
large
10 20


