src/tests/snapshots/hebi__tests__class_def__empty_class_def.snap
---
source: src/tests/class_def.rs
expression: snapshot
---
# Input:
class T: pass
print T


# Result (success):
none

# Stdout:
<class def "T">


